WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75738
[Mac] Thread verifier assertions when printing
https://bugs.webkit.org/show_bug.cgi?id=75738
Summary
[Mac] Thread verifier assertions when printing
Alexey Proskuryakov
Reported
2012-01-06 13:45:34 PST
We're doing too much from secondary thread. We need it to avoid being blocked on WebProcess, but not to manipulate UI process objects.
Attachments
proposed fix
(2.71 KB, patch)
2012-01-06 13:48 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-01-06 13:48:33 PST
Created
attachment 121484
[details]
proposed fix I'm not sure if I'm using the right magic to deallocate on main thread (do we need the first part in WK2?)
Mark Rowe (bdash)
Comment 2
2012-01-06 13:58:43 PST
Comment on
attachment 121484
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=121484&action=review
> Source/WebKit2/UIProcess/API/mac/WKPrintingView.mm:51 > ++ (void)initialize > +{ > + WebCoreObjCFinalizeOnMainThread(self); > +}
I think this is not necessary in WebKit2.
> Source/WebKit2/UIProcess/API/mac/WKPrintingView.mm:127 > + ASSERT(isMainThread()); // This funciton calls the client, which should only be done on main thread.
"funciton"
Alexey Proskuryakov
Comment 3
2012-01-06 14:02:07 PST
Committed <
http://trac.webkit.org/changeset/104334
>. Removed WebCoreObjCFinalizeOnMainThread.
> "funciton"
Oops, didn't see this before landing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug