        [Mac] Thread verifier assertions when printing         https://bugs.webkit.org/show_bug.cgi?id=75738

Reviewed by Sam Weinig.

        * UIProcess/API/mac/WKPrintingView.mm:
        (-[WKPrintingView dealloc]): Dealloc in main thread, so that WebFrameProxy doesn't get
        deref'ed from a secondary one.
        (-[WKPrintingView _adjustPrintingMarginsForHeaderAndFooter]): This method calls out to client,
        which only expects that on main thread.
        (-[WKPrintingView knowsPageRange:]): Call _adjustPrintingMarginsForHeaderAndFooter on main
        thread.



git-svn-id: svn://svn.chromium.org/blink/trunk@104334 bbb929c8-8fbe-4397-9dbb-9b2b20218538